2008-01-04  Michael Albinus  <michael.albinus@gmx.de>

	* dbus.texi (Receiving Method Calls): New chapter.
	(Errors and Events): Add serial number to events.  Replace "signal" by
	"message".  Introduce dbus-event-serial-number.

2008-01-03  Michael Albinus  <michael.albinus@gmx.de>

	* dbus.texi (Type Conversion): Explain the type specification for empty
	arrays.  Use another example.

2007-12-30  Michael Albinus  <michael.albinus@gmx.de>

	* dbus.texi (all): Replace "..." by @dots{}.
	(Type Conversion): Precise the value range for :byte types.
	(Signals): Rename dbus-unregister-signal to dbus-unregister-object.
	Mention its return value.
	(Errors and Events): There is no D-Bus error propagation during event
	processing.

2007-12-29  Jay Belanger  <jay.p.belanger@gmail.com>

	* calc.tex (Yacas Language, Maxima Language, Giac Language):
	New sections.

2007-12-29  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus.texi (Group Parameters): Reorder the text and add a note about
	`gnus-parameters' near the beginning of the node.

2007-12-29  IRIE Tetsuya  <irie@t.email.ne.jp>  (tiny change)

	* gnus.texi (Score File Editing): Fix function name.

2007-12-23  Michael Albinus  <michael.albinus@gmx.de>

	Sync with Tramp 2.1.12.

	* trampver.texi: Update release number.

2007-12-22  Michael Albinus  <michael.albinus@gmx.de>

	* dbus.texi (Type Conversion): Correct input parameters mapping.

2007-12-21  Michael Albinus  <michael.albinus@gmx.de>

	* dbus.texi (Type Conversion): Extend for D-Bus compound types.
	(Errors and Events): Mention wrong-type-argument error.

2007-12-21  Alex Schroeder  <alex@gnu.org>

	* rcirc.texi: Changed single spaces after sentence end to double
	spaces.  Fixed some typos.
	(Internet Relay Chat): Explain relay.
	(Getting started with rcirc): Change items to reflect prompts.
	Add more explanation to rcirc-track-minor-mode and added a comment to
	warn future maintainers that this section is a copy.
	(People): Changed /ignore example.